# chakoshi-mcp-server

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
chakoshi_server/: config.py  server.py
tests/: conftest.py  test_main.py  tmp_.env.test
